adds some routing and db posts

--- a/views/landing.pug
+++ b/views/landing.pug
@@ -1,6 +1,7 @@
+extends layout
 
 block content
-  script(src='/scripts/loginAuthenticate.js')
+  script(src='/script.js')
   p Landing
   button(onclick="login()") Login
   button(onclick="signup()") Signup
