--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,6 +14,9 @@
     <button onClick = 'login()'>
       Login
     </button>
+    <button onClick = 'signup()'>
+      Sign Up
+    </button>
   <% } %>
 </head>
 <body>
