--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Vinyl</title>
-  Login
+  Sign Up
   <link rel="stylesheet" type="text/css" href="/style.css">
   <script type="text/javascript" src="/script.js"></script>
 </head>
@@ -13,8 +13,9 @@
   <h2>Records</h2>
 
   <div>
-    <form action='/login' method='post'>
-      Email <input type='text' name='email'></input><br>
+    <form action='/signup' method='post'>
+      Username <input type='text' name='name'></input><br>
+      Email <input type='email' name='email'></input><br>
       Password <input type='password' name='password'></input><br>
       <input type='submit'></input>
     </form>
