--- a/views/album.ejs
+++ b/views/album.ejs
@@ -23,7 +23,7 @@
 
     <br>
     <%= review.text %>
-    <% if( review.user_id === user.id ){ %>
+    <% if( login && review.user_id === user.id ){ %>
       <button onClick = 'deleteReview( <%= review.id %> )'>Delete</button>
       <% } %>
     <br>
