Adds cancel buttons to loging/signup, and trash symbol to delete buttons

--- a/views/album.ejs
+++ b/views/album.ejs
@@ -24,10 +24,10 @@
     <br>
     <%= review.text %>
     <% if( login && review.user_id === user.id ){ %>
-      <button onClick = 'deleteReview( <%= review.id %> )'>Delete</button>
+      <button onClick = 'deleteReview( <%= review.id %> )'>	🗑 </button>
       <% } %>
     <br>
-    reviewed by 
+    reviewed by
     <a href='/profile/<%= review.user_id %>'>
     <%= review.name%>
     </a>
