--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,7 +28,7 @@
       <%= review.text %>
 
       <% if( login && review.user_id === user.id ){ %>
-        <button onClick = 'deleteReview( <%= review.id %> )'>Delete</button>
+        <button onClick = 'deleteReview( <%= review.id %> )'>	🗑 </button>
         <% } %>
       <br>
       reviewed by
