--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -19,7 +19,12 @@
       Password <input type='password' name='password'></input><br>
       <input type='submit'></input>
     </form>
+    <br>
     <%= message %>
+    <br>
+    <br>
+    <br>
+    <button onClick = 'home()'>Cancel</button>
   </div>
 
 </body>
