--- a/views/login.ejs
+++ b/views/login.ejs
@@ -18,7 +18,12 @@
       Password <input type='password' name='password'></input><br>
       <input type='submit'></input>
     </form>
+    <br>
     <%= message %>
+    <br>
+    <br>
+    <br>
+    <button onClick = 'home()'>Cancel</button>
   </div>
 
 </body>
