--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,10 +31,13 @@
         <button onClick = 'deleteReview( <%= review.id %> )'>	🗑 </button>
         <% } %>
       <br>
+      <br>
       reviewed by
       <a href='/profile/<%= review.user_id %>'>
       <%= review.name%>
       </a>
+      <br>
+      on <%= review.timeCreated.toString().split(' ').slice( 1, 4).join(' ') %>
       <br>
       <br>
     <% }) %>
