--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -6,7 +6,7 @@
 <body>
   <h2> <%= viewingUser.name%> </h2>
   <h3> <%= viewingUser.email%> </h3>
-  <h4> Member since <%= viewingUser.timeCreated%> </h4>
+  <h4> Member since <%= viewingUser.timeCreated.toString().split(' ').slice( 1, 4).join(' ') %> </h4>
   <h3> <%= viewingUser.name%>'s Reviews: </h3>
 
   <% reviews.forEach(review => { %>
@@ -20,6 +20,8 @@
       <button onClick = 'deleteReview( <%= review.id %> )'>	🗑 </button>
       <% } %>
     <br>
+    <br>
+    <%= review.timeCreated.toString().split(' ').slice( 1, 4).join(' ') %>
     <br>
     <br>
   <% }) %>
